{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 29,
  "lineage": "e3d0d765-86ed-b788-8317-c3d562361fd0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "domain": "vpc",
            "id": "eipalloc-0de18913f4eb1422d",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcc094591f354be2",
            "arn": "arn:aws:ec2:us-east-1:407632303832:instance/i-034e681031e2cc878",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034e681031e2cc878",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-07d5c914b95a8eae4"
              }
            ],
            "primary_network_interface_id": "eni-07d5c914b95a8eae4",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0243622c7aa5e2cb1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0100f83f48094ac6f",
            "tags": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e7584b699beb1c61"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407632303832:internet-gateway/igw-0cdb6f6c358b58110",
            "id": "igw-0cdb6f6c358b58110",
            "owner_id": "407632303832",
            "vpc_id": "vpc-04baccc7f90a65300"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-07d5c914b95a8eae4",
            "mac_address": "0e:20:52:68:ec:a1",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0e7584b699beb1c61"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0100f83f48094ac6f"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-040827ee34984c0b3",
            "owner_id": "407632303832",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cdb6f6c358b58110",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cdb6f6c358b58110",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod"
            },
            "vpc_id": "vpc-04baccc7f90a65300"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b693161b11548e1",
            "route_table_id": "rtb-040827ee34984c0b3",
            "subnet_id": "subnet-0100f83f48094ac6f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-route-table",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407632303832:security-group/sg-0e7584b699beb1c61",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7584b699beb1c61",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "407632303832",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-04baccc7f90a65300"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407632303832:subnet/subnet-0100f83f48094ac6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0100f83f48094ac6f",
            "map_public_ip_on_launch": false,
            "owner_id": "407632303832",
            "tags": {
              "Name": "prod-subnet"
            },
            "vpc_id": "vpc-04baccc7f90a65300"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407632303832:vpc/vpc-04baccc7f90a65300",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0968091e0ad08f628",
            "default_route_table_id": "rtb-05811e832dc1d3d45",
            "default_security_group_id": "sg-016203bfef2185a05",
            "dhcp_options_id": "dopt-3045db4a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04baccc7f90a65300",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05811e832dc1d3d45",
            "owner_id": "407632303832",
            "tags": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}